--- a/package.json
+++ b/package.json
@@ -8,23 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "-": "^0.0.1",
-    "@chakra-ui/core": "^0.8.0",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
+    "@chakra-ui/react": "^1.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
     "@octokit/oauth-app": "^1.1.2",
     "@types/jsonwebtoken": "^8.5.0",
-    "D": "^1.0.0",
-    "axios": "^0.19.2",
-    "emotion-theming": "^10.0.27",
+    "axios": "^0.21.0",
+    "framer-motion": "^2.9.4",
     "jsonwebtoken": "^8.5.1",
-    "next": "10",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-icons": "^3.10.0"
+    "next": "^10.0.1",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-icons": "^3.11.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
+    "@types/react": "^16.9.56",
     "prettier": "^2.0.5",
     "typescript": "^3.9.7"
   },
