--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "axios": "^0.21.0",
     "framer-motion": "^2.9.4",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "next": "^10.0.1",
     "react": "^16.8.0",
